ref/tel/test/neg/e309-schema-non-contiguous.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name example

define first-type
  field x
    scalar string

document
  field name
    scalar string

define second-type
  field y
    scalar string
